--- a/style.css
+++ b/style.css
@@ -15,6 +15,21 @@ body{
     width: 300px;
 }
 
+#workingExpression {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: auto;
+    height: 50px;
+    font-size: large;
+    font-weight: bold;
+    padding: 0px 20px 0px 0px;
+    grid-column: span 4;
+    border: 2px solid rgb(51, 51, 51);
+    border-radius: 4px;
+    background-color: rgb(235, 235, 235);
+}
+
 #equal {
     grid-column: span 2;
 }
