--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     grid-template-rows: repeat(5, 1fr);
     grid-gap: 0.5rem;
     width: 300px;
+    flex: wrap;
 }
 
 #workingExpression {
@@ -28,6 +29,7 @@ body{
     border: 2px solid rgb(51, 51, 51);
     border-radius: 4px;
     background-color: rgb(235, 235, 235);
+
 }
 
 #equal {
